--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 index model-maison.fr
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-75JHT26016"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-75JHT26016');
+</script>
